fix: update based on Figma design

--- a/src/_includes/components/header-nav.njk
+++ b/src/_includes/components/header-nav.njk
@@ -25,7 +25,9 @@
       </button>
       <div id="navigation-menu">MENU</div>
     </div>
+    <form method="get" action="/search/">
     {% include 'components/search-container.njk' %}
+    </form>
   </div>
 </div>
 {% include 'components/nav-menu.njk' %}
