--- a/src/_includes/components/search-container.njk
+++ b/src/_includes/components/search-container.njk
@@ -1,4 +1,6 @@
 <div class="search-container">
   <input name="s" type="search" placeholder="{{ placeholderForSearch }}" aria-label="{{ ariaLabelForSearch }}">
-  <svg role="button" type="submit" tabindex="0"><use xlink:href="#search" /></svg>
+  <button class="search-button">
+    <svg aria-label="search" class="search-button-target" role="button" type="submit" tabindex="0"><use xlink:href="#search" /></svg>
+  </button>
 </div>
