--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -28,7 +28,7 @@
   <body>
     <div id="defaultContainer">
       {% include 'components/header.njk' %}
-      <div class="content-wrapper">
+      <div class="content-wrapper{% if page.url === "/" %} homepage-content-wrapper{% endif %}">
         <aside id="toc"></aside>
         <main>
           <nav class="flc-toc-tocContainer"></nav>
