--- a/src/assets/styles/components/_search-container.scss
+++ b/src/assets/styles/components/_search-container.scss
@@ -2,6 +2,10 @@
 .search-container {
 	position: relative;
 
+	button {
+		display: contents;
+	}
+
 	svg {
 		block-size: rem(24);
 		fill: $white;
