--- a/src/_includes/components/idrc-indicator.njk
+++ b/src/_includes/components/idrc-indicator.njk
@@ -1,7 +1,7 @@
 <div class="idrc-indicator-wrapper">
     <div class="idrc-indicator">
         <div class="idrc-indicator-element">
-            <span><em>We Count: Artificial Intelligence<br>Inclusion Projects from</em> <b>Inclusive<br>Design Research Centre</b></span>
+            <span><em>We Count</em>: Artificial Intelligence Inclusion Projects from {% include "svg/idrc-logo.svg" %} <b>Inclusive Design Research Centre</span>
         </div>
     </div>
 </div>
