--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -12,6 +12,9 @@
 <div>
   <article>
     <div class="api-content homepage-content">
+    <div class="homepage-intro">
+      <p>IDRC – Advancing the conversation of inclusive AI and data ecosystems</p>
+    </div>
     {% if bannerImage %}
     <div class="banner-image-container">
       <figure>
@@ -25,15 +28,15 @@
     </div>
     {% endif %}
     {{ content | safe }}
+    <div class="homepage-cards">
+      {%- from '../components/card.macro.njk' import card %}
+      {{ card({color: "blue", url: "/resources/", title: "Resource Library", text: "Search IDRC's library of AI and data analytics resources", backgroundSvg: "../svg/blue.svg"}) }}
+      {{ card({color: "green", url: "/events/", title: "Events", text: "Find out about IDRC events and how you can participate", backgroundSvg: "../svg/green.svg"}) }}
+      {{ card({color: "azure", url: "/initiatives/", title: "Inclusive AI Initiatives", text: "Explore IDRC project activities", backgroundSvg: "../svg/azure.svg"}) }}
+      {{ card({color: "yellow", url: "/rtdd/", title: "Regulating the Digital<div lang='fr-CA'>Réguler le numérique</div>", text: "Addressing digital exclusion / <span lang='fr-CA'>Lutter contre l’exclusion numérique</span>", backgroundSvg: "../svg/yellow.svg"}) }}
+    </div>
     </div>
   </article>
-  <div class="homepage-cards">
-    {%- from '../components/card.macro.njk' import card %}
-    {{ card({color: "blue", url: "/resources/", title: "Resource Library", text: "Search IDRC's library of AI and data analytics resources", backgroundSvg: "../svg/blue.svg"}) }}
-    {{ card({color: "green", url: "/events/", title: "Events", text: "Find out about IDRC events and how you can participate", backgroundSvg: "../svg/green.svg"}) }}
-    {{ card({color: "azure", url: "/initiatives/", title: "Inclusive AI Initiatives", text: "Explore IDRC project activities", backgroundSvg: "../svg/azure.svg"}) }}
-    {{ card({color: "yellow", url: "/rtdd/", title: "Regulating the Digital<div lang='fr-CA'>Réguler le numérique</div>", text: "Addressing digital exclusion / <span lang='fr-CA'>Lutter contre l’exclusion numérique</span>", backgroundSvg: "../svg/yellow.svg"}) }}
-  </div>
 </div>
 
 {% elif page.url === "/events/" %}
