--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -74,7 +74,7 @@ header {
 				padding-block: rem(30);
 				padding-inline: rem(96);
 
-				.search-container {
+				form {
 					display: none;
 				}
 			}
@@ -153,7 +153,7 @@ header {
 
 			// Styles for the navigation menu
 			.primary-nav {
-				background: $white;
+				background: rgb(247 236 207 / 100%);
 				display: flex;
 				flex-direction: column;
 				inline-size: 100vw;
@@ -241,8 +241,9 @@ header {
 					flex-direction: column;
 					padding-block: unset;
 
-					.search-container {
+					form {
 						display: block;
+						padding-inline: unset;
 					}
 				}
 
