--- a/src/assets/styles/components/_idrc-indicator.scss
+++ b/src/assets/styles/components/_idrc-indicator.scss
@@ -14,6 +14,11 @@
 			line-height: rem(21);
 			padding-block: 0;
 			padding-inline: rem(96);
+
+			a {
+				color: #000;
+				text-decoration: underline;
+			}
 		}
 	}
 }
