--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -1,30 +1,62 @@
 // Header styles
 
 header {
-	background-color: $white;
+	.nav-mobile-layout-wrapped {
+		display: contents;
+	}
+
+	.header-recount {
+		background-color: #fbdc90;
+		border-radius: rem(36);
+		color: #1a4672;
+		font-family: "Montserrat Alternates", Montserrat, $family-sans-serif;
+		font-size: rem(24);
+		padding-block: rem(18);
+		padding-inline: rem(33);
+		text-align: center;
+		white-space: nowrap;
+	}
 
 	form {
-		align-items: center;
-		display: flex;
+		padding-inline: 6.5rem;
 	}
 
 	// Styles for the search container
 	.search-container {
 		svg {
-			block-size: rem(24);
+			block-size: rem(40);
 			fill: $white;
-			inline-size: rem(24);
-			margin: rem(-29);
+			inline-size: rem(40);
+			right: rem(30);
+			top: rem(18);
 			z-index: 1;
 		}
 
 		input[type="search"] {
-			border-radius: rem(16);
+			block-size: rem(71);
+			border-radius: rem(35.5);
 			box-shadow: $border-shadow-light;
-			inline-size: rem(160);
+			font-size: rem(24);
+			font-weight: $font-weight-semibold;
+			inline-size: 100%;
 			outline: none;
-			padding-block: rem(8);
-			padding-inline: rem(32) rem(16);
+			padding-inline-start: rem(32);
+		}
+
+		/* remove the ‘X’ from Internet Explorer */
+		input[type="search"]::-ms-clear,
+		input[type="search"]::-ms-reveal {
+			block-size: 0;
+			display: none;
+			inline-size: 0;
+		}
+
+		/* remove the ‘X’ from Chrome */
+		input[type="search"]::-webkit-search-decoration,
+		input[type="search"]::-webkit-search-cancel-button,
+		input[type="search"]::-webkit-search-results-button,
+		input[type="search"]::-webkit-search-results-decoration {
+			display: none;
 		}
 	}
 
@@ -33,62 +65,84 @@ header {
 		inline-size: 100%;
 
 		.site-nav {
-			// drop shadow around nav element
-			box-shadow: $border-shadow-light;
+			.nav-container {
+				align-items: center;
+				border-block-end: rem(3) rgb(0 0 0 / 10%) outset;
+				border-block-start: rem(3) rgb(0 0 0 / 10%) outset;
+				display: flex;
+				justify-content: space-between;
+				padding-block: rem(30);
+				padding-inline: rem(96);
 
-			// spacing for drop shadow, due to clipping by the next element
-			margin-block-end: $border-shadow-radius;
-
-			.nav-wideScreen {
-				display: none;
+				form {
+					display: none;
+				}
 			}
 
-			.nav-smallScreen {
+			.starter-nav {
+				align-items: center;
 				display: flex;
 				flex-direction: column;
-				padding-block: 0.5rem;
-				padding-inline: 0;
-				position: relative;
+				inline-size: rem(90);
+				justify-content: end;
+				padding-block: 0;
 
-				.starter-nav {
-					display: flex;
-					flex-direction: row;
-					inline-size: 100%;
-					justify-content: space-between;
-					margin: auto;
-					padding-block: 0;
-					padding-inline: rem(16);
+				// Toggle menu button on mobile design
+				// Override the default button styles from _base.scss and apply the new style
+				button {
+					background: none;
+					block-size: rem(90);
+					border: rem(1) solid;
+					border-radius: 50%;
+					box-shadow: none;
+					color: $black;
+					inline-size: rem(90);
+					padding: rem(24);
 
-					// Toggle menu button on mobile design
-					// Override the default button styles from _base.scss and apply the new style
-					button {
-						background: none;
-						border: none;
-						border-radius: 0;
-						box-shadow: none;
-						color: $black;
-						padding: rem(8);
+					svg {
+						block-size: rem(42);
+						inline-size: rem(42);
+						pointer-events: none;
+					}
+				}
 
-						svg {
-							block-size: rem(32);
-							inline-size: rem(32);
-							padding: rem(3.2);
-							pointer-events: none;
+				button::before {
+					content: none;
+				}
+
+				button:hover,
+				button:focus {
+					background-color: $orange-focus;
+				}
+
+				#menuToggleButton .screen-reader-only {
+					display: none;
+				}
+
+				#menuToggleButton {
+					&[aria-expanded="false"] {
+						.menu-close {
+							display: none;
+						}
+
+						.menu-open {
+							display: block;
 						}
 					}
 
-					button::before {
-						content: none;
-					}
+					&[aria-expanded="true"] {
+						.menu-close {
+							display: block;
+						}
 
-					button:hover,
-					button:focus {
-						background-color: $orange-focus;
+						.menu-open {
+							display: none;
+						}
 					}
+				}
 
-					#menuToggleButton .screen-reader-only {
-						display: none;
-					}
+				#navigation-menu {
+					text-align: center;
 				}
 			}
 
@@ -98,96 +152,35 @@ header {
 			}
 
 			// Styles for the navigation menu
-			nav.primary-nav {
-				background: $white;
-				display: none;
+			.primary-nav {
+				background: rgb(247 236 207 / 100%);
+				display: flex;
+				flex-direction: column;
 				inline-size: 100vw;
-				position: absolute;
-				top: rem(56);
-				z-index: 2;
+				padding-block: rem(36);
+
+				nav {
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					margin-block-end: rem(28);
+					padding-inline: 6.5rem;
+				}
 
 				a {
-					border-block-end: solid rem(2);
 					color: $black;
-					display: block;
-					float: none;
-					font-size: rem(18) !important; // Enactors.css in infusion uses !important on this element
-					font-weight: $font-weight-normal;
-					margin-block: rem(16);
-					margin-inline: rem(16);
-					text-align: start;
-					text-transform: uppercase;
-					white-space: nowrap;
-				}
-			}
-		}
-	}
-}
-
-@include breakpoint-up(xl) {
-	header {
-		.search-container {
-			margin-inline-start: rem(80);
-
-			svg {
-				margin: rem(-40);
-			}
-
-			input[type="search"],
-			input[type="search"]:focus {
-				border-radius: rem(28);
-				inline-size: rem(240);
-				padding-block: rem(16);
-				padding-inline: rem(48);
-			}
-		}
-
-		.site-nav-wrapper {
-			.site-nav {
-				justify-content: space-around;
-
-				.nav-smallScreen {
-					display: none;
+					font-family: "Montserrat Alternates", Montserrat, $family-sans-serif;
+					font-size: rem(32) !important; // Enactors.css in infusion uses !important on this element
+					font-weight: $font-weight-medium;
+					inline-size: 100%;
+					line-height: rem(64);
+					text-transform: capitalize;
 				}
 
-				.nav-wideScreen {
-					display: flex;
-					flex-direction: row;
-					justify-content: space-between;
-					margin: auto;
-					margin-block-start: 1rem;
-					max-inline-size: $max-width-margins;
-					padding-block: 0;
-					padding-inline: rem(16);
-				}
-
-				nav.primary-nav {
-					background-color: transparent;
-					display: flex;
-					flex: 1;
-					flex-direction: row;
-					inline-size: auto;
-					justify-content: space-between;
-					position: inherit;
-					top: rem(120);
-					z-index: 0;
-
-					a {
-						border-block-end: none;
-						float: none;
-						margin-block: rem(24);
-						margin-inline: 0 rem(8);
-						padding-block: rem(8);
-						padding-inline: rem(10);
-					}
-
-					// When the user is in a section (other than the Home page), underline this particular item
-					// in the top level navigation.
-					a[aria-current="page"] {
-						background-color: $orange-focus;
-						font-weight: $font-weight-bold;
-						text-decoration: underline;
-					}
+				a[aria-current="page"] {
+					background-color: $orange-focus;
+					font-weight: $font-weight-bold;
+					text-decoration: underline;
 				}
 			}
 		}
@@ -195,8 +188,102 @@ header {
 }
 
 // This media query breakpoint is for the Galaxy Fold screen.
+
+@include breakpoint-down(md) {
+	header {
+		.nav-mobile-layout-wrapped {
+			align-items: center;
+			display: flex;
+			inline-size: 100vw;
+			justify-content: space-between;
+			padding-block: rem(40);
+
+			.brand,
+			.starter-nav {
+				margin-inline-start: rem(96);
+			}
+
+			.header-recount,
+			.search-container {
+				margin-inline-end: rem(96);
+			}
+
+			&:first-child {
+				padding-block: rem(40);
+			}
+
+			&:last-child {
+				border-block-start: rem(3) rgb(0 0 0 / 10%) outset;
+				padding-block: rem(10);
+			}
+		}
+
+		.header-recount {
+			block-size: max-content;
+			font-size: rem(14);
+		}
+
+		.search-container {
+			input[type="search"] {
+				font-size: rem(16);
+				font-weight: $font-weight-semibold;
+			}
+		}
+
+		form {
+			display: none;
+		}
+
+		.site-nav-wrapper {
+			.site-nav {
+				.nav-container {
+					display: flex;
+					flex-direction: column;
+					padding-block: unset;
+
+					form {
+						display: block;
+						padding-inline: unset;
+					}
+				}
+
+				.starter-nav {
+					justify-content: unset;
+
+					button {
+						border: unset;
+						border-radius: unset;
+						padding: rem(8);
+
+						svg {
+							block-size: rem(74);
+							inline-size: rem(74);
+						}
+					}
+
+					#navigation-menu {
+						font-size: rem(14);
+						font-weight: $font-weight-semibold;
+					}
+				}
+
+				.primary-nav {
+					nav {
+						margin-block-end: unset;
+					}
+
+					a {
+						font-size: rem(14) !important; // Enactors.css in infusion uses !important on this element
+						line-height: rem(28);
+					}
+				}
+			}
+		}
+	}
+}
+
 @include breakpoint-down(xs) {
-	header .site-nav-wrapper .site-nav .nav-smallScreen .starter-nav #menuToggleButton {
+	header .site-nav-wrapper .site-nav .starter-nav #menuToggleButton {
 		span {
 			display: none;
 		}
