--- a/src/_includes/components/nav-menu.njk
+++ b/src/_includes/components/nav-menu.njk
@@ -3,7 +3,13 @@
     {% set navItems = collections.pages | eleventyNavigation %}
     {%- for item in navItems %}
       {%- if (item.order > 0) %}
-      <a {% if page.url === item.url %}aria-current="page" {% endif %}href="{{ item.url }}" {% if item.locale and item.locale !== "en-CA" %}hreflang="{{ item.locale }}" lang="{{ item.locale }}"{% endif %}>{{ item.key }}</a>
+      {%- if navItems[loop.index0 - 1].translation_key !== item.translation_key %}
+      <div>
+      {%- endif %}
+      <a data-key="{{ item.translation_key }}" {% if page.url === item.url %}aria-current="page" {% endif %}href="{{ item.url }}" {% if item.locale and item.locale !== "en-CA" %}hreflang="{{ item.locale }}" lang="{{ item.locale }}"{% endif %}>{{ item.key }}</a>
+      {%- if item.translation_key and navItems[loop.index0 + 1].translation_key !== item.translation_key %}
+      </div>
+      {%- endif %}
       {%- endif %}
     {%- endfor %}
   </nav>
