--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -58,10 +58,12 @@ a {
 a:hover,
 a:focus {
 	background-color: $orange-focus;
+	border-radius: rem(4);
 	color: $blue-alt-dark;
 }
 
 a:focus {
+	box-shadow: 0 0 0 rem(4) $orange-focus, 0 0 0 rem(6) $black;
 	outline: none;
 }
 
