--- a/src/assets/styles/components/_cards.scss
+++ b/src/assets/styles/components/_cards.scss
@@ -19,9 +19,15 @@
 		position: relative;
 		text-align: center;
 
+		a:hover,
+		a:focus {
+			background: none;
+			box-shadow: none;
+		}
+
 		&:hover,
 		&:has(a:focus) {
-			box-shadow: rem(10) rem(10) rem(10) rgba(0 0 0 / 25%);
+			box-shadow: 0 0 0 rem(2) $black, rem(10) rem(10) rem(10) rgba(0 0 0 / 25%);
 		}
 
 		a::after {
