--- a/src/assets/styles/components/_search-container.scss
+++ b/src/assets/styles/components/_search-container.scss
@@ -3,14 +3,27 @@
 	position: relative;
 
 	button {
-		display: contents;
+		appearance: none;
+		background: transparent;
+		block-size: rem(44);
+		border: 0;
+		border-radius: 50%;
+		inline-size: rem(44);
+		position: absolute;
+	}
+
+	button:hover {
+		background-color: #fbdc90;
+	}
+
+	button:focus {
+		box-shadow: 0 0 0 rem(2) #000 inset;
 	}
 
 	svg {
-		block-size: rem(24);
+		block-size: rem(32);
 		fill: $white;
-		inline-size: rem(24);
-		position: absolute;
+		inline-size: rem(32);
 	}
 
 	input[type="search"] {
