--- a/src/assets/styles/layout/_layout.scss
+++ b/src/assets/styles/layout/_layout.scss
@@ -13,13 +13,14 @@
 	background-color: rgb(244 248 252 / 100%);
 	flex: 1;
 	font-size: rem(14);
-	padding-inline: rem(96);
+	padding-inline: rem(27);
 }
 
 main {
 	inline-size: 100%;
 	margin-block: 0;
 	margin-inline: auto;
+	max-inline-size: 75ch;
 }
 
 article {
@@ -158,7 +159,7 @@ p img {
 
 // Special styling rules for homepage content
 article .homepage-content {
-	font-family: "Montserrat Alternates", Montserrat, $family-sans-serif;
+	font-family: $family-montserrat;
 	margin-inline: auto;
 	max-inline-size: max-content;
 	text-align: center;
@@ -167,14 +168,13 @@ article .homepage-content {
 	h2 {
 		border: none;
 		color: #1b93b9;
-		font-size: rem(48);
+		font-size: rem(24);
 		font-weight: 800;
 	}
 
 	p {
-		font-family: Montserrat, $family-sans-serif;
-		font-size: rem(24);
-		line-height: rem(36);
+		font-size: rem(14);
+		line-height: rem(21);
 		max-inline-size: rem(630);
 		text-align: start;
 	}
@@ -238,19 +238,6 @@ figcaption {
 	white-space: nowrap;
 }
 
-@include breakpoint-down(md) {
-	article .homepage-content {
-		h2 {
-			font-size: rem(24);
-		}
-
-		p {
-			font-size: rem(14);
-			line-height: rem(21);
-		}
-	}
-}
-
 @include breakpoint-up(lg) {
 	#defaultContainer aside {
 		padding-block-start: unset;
@@ -263,7 +250,7 @@ figcaption {
 	.content-wrapper {
 		display: grid;
 		font-size: rem(18);
-		grid-template-columns: auto auto;
+		grid-template-columns: 1fr minmax(75ch, 130ch) 1fr;
 		grid-template-rows: auto auto;
 	}
 
@@ -313,7 +300,13 @@ figcaption {
 	}
 
 	article .homepage-content {
+		h2 {
+			font-size: rem(48);
+		}
+
 		p {
+			font-size: rem(24);
+			line-height: rem(36);
 			max-inline-size: rem(905);
 		}
 
